--- a/package.json
+++ b/package.json
@@ -19,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/cryptoticket/react-native-push-notification/issues"
   },
-  "homepage": "https://github.com/cryptoticket/react-native-push-notification#readme"
+  "homepage": "https://github.com/cryptoticket/react-native-push-notification#readme",
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-native": ">=0.60.5"
+  },
+  "devDependencies": {
+    "react": "16.8.6",
+    "react-native": "0.60.5"
+  }
 }
