--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"  // From node_modules
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
 }
