--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <application
       android:name=".MainApplication"
+      android:launchMode="singleTask"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
       android:roundIcon="@mipmap/ic_launcher_round"
@@ -18,6 +19,12 @@
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="app" android:host="content" />
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
@@ -41,14 +48,21 @@
               <action android:name="com.google.firebase.MESSAGING_EVENT" />
           </intent-filter>
       </service>
-      <receiver android:name="com.cryptoticket.reactnativepushnotification.PushNotificationBroadcastReceiver"  android:exported="true">
+      <receiver android:name="com.cryptoticket.reactnativepushnotification.PushNotificationBroadcastReceiver" android:exported="true">
           <intent-filter>
               <action android:name="com.cryptoticket.reactnativepushnotification.action.CLOSE_NOTIFICATION"/>
+              <action android:name="com.cryptoticket.reactnativepushnotification.action.OPEN_URL"/>
+              <action android:name="com.cryptoticket.reactnativepushnotification.action.PRESS_ON_NOTIFICATION"/>
               <category android:name="android.intent.category.DEFAULT"/>
           </intent-filter>
       </receiver>
       <!-- end notification settings -->
-
+      <!-- start optional notification settings -->
+      <!-- uncomment to override default notification receiver + set broadcast receiver classname from "com.cryptoticket.reactnativepushnotification.PushNotificationBroadcastReceiver" to your class -->
+       <!--<meta-data
+          android:name="com.cryptoticket.reactnativepushnotification.default_broadcast_receiver"
+          android:value="com.example.CustomPushNotificationBroadcastReceiver" />-->
+      <!-- end optional notification settings -->
     </application>
 
 </manifest>
