--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cryptoticket/react-native-push-notification",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React native package that manages push notifications",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "react native",
-    "react native push notification"
+    "react native push notification",
+    "deep links"
   ],
   "author": "Vladimir Ryzhak <ryzhak.vladimir@gmail.com>",
   "license": "ISC",
